[gd_scene load_steps=5 format=3 uid="uid://dsiqfg5wnspu4"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_6omsm"]
[ext_resource type="TileSet" uid="uid://d4lgjqe5qdgp4" path="res://Materials/academia.tres" id="2_vwq03"]
[ext_resource type="TileSet" uid="uid://2rv7ruq0wfpg" path="res://Materials/equipments.tres" id="3_f2wtw"]
[ext_resource type="Theme" uid="uid://b3pyp5hxx8e7m" path="res://Materials/tema.tres" id="4_mnaoq"]

[node name="Node2D" type="Node2D"]

[node name="map" type="Node2D" parent="."]
script = ExtResource("1_6omsm")

[node name="Layer0" type="TileMapLayer" parent="map"]
use_parent_material = true
tile_set = ExtResource("2_vwq03")

[node name="Layer1" type="TileMapLayer" parent="map"]
use_parent_material = true
tile_set = ExtResource("2_vwq03")

[node name="Layer2" type="TileMapLayer" parent="map"]
use_parent_material = true
tile_set = ExtResource("3_f2wtw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="selectedItem" type="RichTextLabel" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 18.0
offset_top = 17.0
offset_right = 1037.0
offset_bottom = 149.0
theme = ExtResource("4_mnaoq")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
fit_content = true
scroll_active = false
